fix text-align-center on container

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,7 +6,7 @@ box-shadow: 0 0 5px rgba(0,0,0,0.2);
 .card-content {
   background-color: rgba(255, 255, 255, 0.605);
   border-radius: 4px;
-
+  text-align: center;
 }
 
 // .h1 {
