--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -3,6 +3,5 @@
   margin: 0 auto;
   max-width: 1200px;
   min-height: 50vh;
-  padding:20px;
-  text-align: center;
+  padding: 20px;
 }
