--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,3 +19,7 @@
 #home-body {
   margin-top: 20px;
 }
+
+.card-content {
+  text-align: center;
+}
